--- a/FrontEnd/eRural/tsconfig.json
+++ b/FrontEnd/eRural/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false, //não solicita inicialização dos atributos.
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
