--- a/BackEnd/eRural/src/main/resources/application.properties
+++ b/BackEnd/eRural/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/e_Rural?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=neopc121
+spring.datasource.password=jessica123
 spring.jpa.show-sql=true
